[package]
name = "ithil"
edition = "2024"

[workspace]
members = ["bootloader", "kernel"]

[profile.dev]
panic = "abort"
debug-assertions = false

[profile.release]
panic = "abort"
debug-assertions = false

[build-dependencies]
fatfs = { version = "0.3.6", features = ["std"], default-features = false }
bootloader = { path = "bootloader", artifact = "bin", target = "x86_64-unknown-uefi" }
kernel = { path = "kernel", artifact = "bin", target = "x86_64-unknown-none" }
