[package]
name = "bootloader"
edition = "2024"

[[bin]]
name = "bootloader"
bench = false
test = false
path = "main.rs"

[lib]
name = "bootloader"
bench = false
test = false
path = "lib.rs"

[dependencies]
log = "0.4.29"
uefi = { version = "0.36.1", features = [
    "alloc",
    "global_allocator",
    "logger",
    "log-debugcon",
] }
