[package]
name = "bootloader"
edition = "2024"

[[bin]]
name = "bootloader"
bench = false
test = false
path = "main.rs"

[lib]
name = "bootloader"
bench = false
test = false
path = "lib.rs"

[dependencies]
log = { version = "0.4.29", features = ["max_level_info"] }
uefi = { version = "0.36.1", features = [
    "alloc",
    "global_allocator",
    "logger",
    "log-debugcon",
] }
x86_64 = "0.15.4"
xmas-elf = "0.10.0"
