[package]
name = "kernel"
edition = "2024"

[[bin]]
name = "kernel"
bench = false
test = false
path = "main.rs"

[lib]
name = "kernel"
bench = false
test = false
path = "lib.rs"

[dependencies]
bootloader = { path = "../bootloader" }
log = "0.4.29"
qemu-debugcon = { version = "0.1.0", features = ["log"] }
