cargo-features = ["per-package-target"]

[package]
name = "kernel"
edition = "2024"
default-target = "x86_64-unknown-none"

[[bin]]
name = "kernel"
bench = false
test = false
path = "main.rs"

[lib]
name = "kernel"
bench = false
test = false
path = "lib.rs"

[dependencies]
log = "0.4.29"
qemu-debugcon = { version = "0.1.0", features = ["log"] }
spin = "0.10.0"
x86_64 = "0.15.4"
